commit tree 3603580cb8d9c17f5bc0ab2e1c25677a3d971669

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,10 @@
 
 <p>
   <h3>Name:</h3>
-  <%= @post.name %>
+  <%= @post.name %><br>
+  Tags: <% @post.tags.each do |t| %>
+    <%= t.name %><br>
+  <% end %>
 </p>
 
 
